--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".ui.SplashActivity"
             android:noHistory="true"
@@ -24,7 +23,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
@@ -44,6 +42,10 @@
         </activity>
 
         <service android:name=".service.FetchRoomRecordsService" />
+
+        <activity
+            android:name=".ui.DirectoryActivity"
+            android:theme="@style/AppTheme.Basic" />
     </application>
 
 </manifest>
