--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".Session"
@@ -40,12 +41,15 @@
                 <data android:scheme="http" />
             </intent-filter>
         </activity>
-
-        <service android:name=".service.FetchRoomRecordsService" />
-
         <activity
             android:name=".ui.DirectoryActivity"
             android:theme="@style/AppTheme.Basic" />
+        <activity
+            android:name=".ui.SettingsActivity"
+            android:hardwareAccelerated="false"
+            android:theme="@style/AppTheme" />
+
+        <service android:name=".service.FetchRoomRecordsService" />
     </application>
 
 </manifest>
